Adicionando menu interativo

--- a/rascunho.ipynb
+++ b/rascunho.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv \n",
+    "import csv\n",
+    "\n",
     "\n",
     "class Lista_Tarefas:\n",
     "    # metodo construtor\n",
     "    def __init__(self):\n",
     "        # ainda pendente\n",
     "        pass\n",
-    "        \n",
-    "    \n",
+    "\n",
     "    # metodo para procurar tarefa\n",
+    "\n",
     "    def _procurar_tarefa(self, titulo):\n",
     "        with open('tarefas.csv') as arquivo:\n",
     "            leitor = csv.reader(arquivo, delimiter=';', lineterminator='\\n')\n",
@@ -24,17 +25,18 @@
     "                    return titulo\n",
     "        return None\n",
     "\n",
-    "    # metodo para adicionar tarefa    \n",
+    "    # metodo para adicionar tarefa\n",
     "    def adicionar_tarefa(self, titulo, data):\n",
     "        tarefa_procurada = self._procurar_tarefa(titulo)\n",
     "        if tarefa_procurada:\n",
     "            return 'Tarefa já existente!'\n",
     "        with open('tarefas.csv') as arquivo_leitura:\n",
-    "            conteudo_leitor = list(csv.reader(arquivo_leitura, delimiter=';', lineterminator='\\n'))\n",
+    "            conteudo_leitor = list(csv.reader(\n",
+    "                arquivo_leitura, delimiter=';', lineterminator='\\n'))\n",
     "        with open('tarefas.csv', 'w') as arquivo:\n",
     "            escritor = csv.writer(arquivo, delimiter=';', lineterminator='\\n')\n",
     "            escritor.writerows(conteudo_leitor)\n",
-    "            escritor.writerow([titulo, data, 'Pendente']) \n",
+    "            escritor.writerow([titulo, data, 'Pendente'])\n",
     "        return f'Tarefa {titulo} adicionada com sucesso!'\n",
     "\n",
     "    # metodo para alterar status de tarefa\n",
@@ -42,29 +44,33 @@
     "        tarefa_procurada = self._procurar_tarefa(titulo)\n",
     "        if tarefa_procurada:\n",
     "            with open('tarefas.csv') as arquivo_leitura:\n",
-    "                leitor = list(csv.reader(arquivo_leitura, delimiter=';', lineterminator='\\n'))\n",
+    "                leitor = list(csv.reader(arquivo_leitura,\n",
+    "                              delimiter=';', lineterminator='\\n'))\n",
     "                for linha in leitor:\n",
-    "                    if linha[0].strip().lower() == titulo.strip().lower():            \n",
-    "                        if linha[2] == 'Pendente':                        \n",
+    "                    if linha[0].strip().lower() == titulo.strip().lower():\n",
+    "                        if linha[2] == 'Pendente':\n",
     "                            linha[2] = 'Concluída'\n",
     "                            novo_status = 'Concluída'\n",
     "                        else:\n",
     "                            linha[2] = 'Pendente'\n",
     "                            novo_status = 'Pendente'\n",
     "            with open('tarefas.csv', 'w') as arquivo_escrita:\n",
-    "                escritor = csv.writer(arquivo_escrita, delimiter=';', lineterminator='\\n')\n",
+    "                escritor = csv.writer(\n",
+    "                    arquivo_escrita, delimiter=';', lineterminator='\\n')\n",
     "                escritor.writerows(leitor)\n",
     "            return f'Status da Tarefa {tarefa_procurada} atualizado para **{novo_status}**!'\n",
-    "        return 'Tarefa não encontrada'         \n",
+    "        return 'Tarefa não encontrada'\n",
     "\n",
     "    # metodo para remover tarefa\n",
     "    def remover_tarefa(self, titulo):\n",
     "        tarefa_procurada = self._procurar_tarefa(titulo)\n",
     "        if tarefa_procurada:\n",
     "            with open('tarefas.csv') as arquivo_leitura:\n",
-    "                leitor = list(csv.reader(arquivo_leitura, delimiter=';', lineterminator='\\n'))\n",
+    "                leitor = list(csv.reader(arquivo_leitura,\n",
+    "                              delimiter=';', lineterminator='\\n'))\n",
     "            with open('tarefas.csv', 'w') as arquivo_escrita:\n",
-    "                escritor = csv.writer(arquivo_escrita, delimiter=';', lineterminator='\\n')\n",
+    "                escritor = csv.writer(\n",
+    "                    arquivo_escrita, delimiter=';', lineterminator='\\n')\n",
     "                for linha in leitor:\n",
     "                    if linha[0].strip().lower() != titulo.strip().lower():\n",
     "                        escritor.writerow(linha)\n",
@@ -72,22 +78,23 @@
     "        return 'Tarefa não encontrada'\n",
     "\n",
     "    # metodo para visualizar tarefas\n",
-    "    def visualizar_tarefas(self,data):\n",
-    "        tarefas_dia =[]\n",
+    "    def visualizar_tarefas(self, data):\n",
+    "        tarefas_dia = []\n",
     "        with open('tarefas.csv') as arquivo_leitura:\n",
-    "            leitor = list(csv.reader(arquivo_leitura, delimiter=';', lineterminator='\\n'))\n",
+    "            leitor = list(csv.reader(arquivo_leitura,\n",
+    "                          delimiter=';', lineterminator='\\n'))\n",
     "            for linha in leitor:\n",
     "                if linha[1].strip() == data.strip():\n",
     "                    tarefas_dia.append(linha)\n",
     "        return tarefas_dia\n",
-    "        \n",
+    "\n",
     "    def __repr__(self):\n",
     "        return 'Em implementação...'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +103,7 @@
        "Em implementação..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +133,7 @@
        "'Tarefa asdad adicionada com sucesso!'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,22 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Tarefa já existente!'"
+       "'Tarefa oicaradeboi adicionada com sucesso!'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista2.adicionar_tarefa('dadadda','4')"
+    "lista2.adicionar_tarefa('oicaradeboi','8')"
    ]
   },
   {
@@ -340,7 +347,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import inquirer\n",
+    "\n",
+    "questions = [\n",
+    "  inquirer.List('option',\n",
+    "    message='Escolha uma das opções abaixo',\n",
+    "    choices=[\n",
+    "      'Adicionar tarefa',\n",
+    "      'Alterar status da tarefa',\n",
+    "      'Remover tarefa',\n",
+    "      'Tarefas de outro dia',\n",
+    "      'Encerrar'\n",
+    "    ]\n",
+    "  ),\n",
+    "  inquirer.Text('name', message='Qual é o seu nome?')\n",
+    "]\n",
+    "\n",
+    "answers = inquirer.prompt(questions)\n",
+    "\n",
+    "print(answers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: inquirer in c:\\users\\victoria\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (2.9.1)\n",
+      "Requirement already satisfied: blessed>=1.19.0 in c:\\users\\victoria\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from inquirer) (1.19.0)\n",
+      "Requirement already satisfied: python-editor>=1.0.4 in c:\\users\\victoria\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from inquirer) (1.0.4)\n",
+      "Requirement already satisfied: readchar>=2.0.1 in c:\\users\\victoria\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from inquirer) (3.0.5)\n",
+      "Requirement already satisfied: jinxed>=1.1.0 in c:\\users\\victoria\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from blessed>=1.19.0->inquirer) (1.1.0)\n",
+      "Requirement already satisfied: six>=1.9.0 in c:\\users\\victoria\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from blessed>=1.19.0->inquirer) (1.16.0)\n",
+      "Requirement already satisfied: wcwidth>=0.1.4 in c:\\users\\victoria\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from blessed>=1.19.0->inquirer) (0.2.5)\n",
+      "Requirement already satisfied: ansicon in c:\\users\\victoria\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from jinxed>=1.1.0->blessed>=1.19.0->inquirer) (1.89.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install inquirer"
+   ]
   }
  ],
  "metadata": {
@@ -348,7 +400,7 @@
    "hash": "f1cf30719646796bd6e1a0c7e8c5e807899a1bd0a09b180b5f8289a9fceb4b09"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -362,9 +414,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
